attached_assets/Pasted-ERRO-Encountered-unknown-tag-39-endif-39-Jinja-was-look_1771420481456.txt
ERRO: Encountered unknown tag &#39;endif&#39;. Jinja was looking for the following tags: &#39;endfor&#39; or &#39;else&#39;. The innermost block that needs to be closed is &#39;for&#39;.

TRACE:
Traceback (most recent call last):
  File &#34;/usr/local/lib/python3.11/site-packages/flask/app.py&#34;, line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/flask/app.py&#34;, line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/app/utils/database_diagnostics.py&#34;, line 300, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File &#34;/app/views/employees.py&#34;, line 395, in funcionarios
    return render_template(&#39;funcionarios.html&#39;,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/flask/templating.py&#34;, line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/environment.py&#34;, line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/environment.py&#34;, line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/environment.py&#34;, line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/loaders.py&#34;, line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/environment.py&#34;, line 771, in compile
    self.handle_exception(source=source_hint)
  File &#34;/usr/local/lib/python3.11/site-packages/jinja2/environment.py&#34;, line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File &#34;/app/templates/funcionarios.html&#34;, line 1558, in template
    {% endif %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag &#39;endif&#39;. Jinja was looking for the following tags: &#39;endfor&#39; or &#39;else&#39;. The innermost block that needs to be closed is &#39;for&#39;.
